--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,14 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
 
 	//log
-	implementation 'org.springframework.boot:spring-boot-starter-logging:2.6.8'
+	implementation 'org.springframework.boot:spring-boot-starter-logging:2.7.0'
 
 	//SMTP
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	//swagger
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'io.springfox:springfox-swagger2:3.0.0'
 
 }
 
