--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 	//swagger
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 	implementation 'io.springfox:springfox-swagger2:3.0.0'
-
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.5'
 }
 
 tasks.named('test') {
